LIBDRUM-141. Resolve dspace.content package errors: Community, EtdUnit
1. Added place holder for the updateLastModified method.

https://issues.umd.edu/browse/LIBDRUM-141